# CPPL

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
cppl/: __init__.py  design.py  env.py
cppl/codegen/: __init__.py  circt.py
cppl/frontend/: __init__.py  compiler.py  const_analysis.py  module.py  prompt.py  types.py
cppl/ir/: __init__.py  errors.py  infer.py  models.py  parser.py  validator.py
examples/: cppl_demo.py  cpu.py  cpu.sv  execute_unit.py  literal_interface.py  packet_router.py
